fix: misc. UI issues including alignment change on error in depoy infra tab (#3422)

--- a/src/modules/75-cd/components/PipelineSteps/GcpInfrastructureSpec/GcpInfrastructureSpec.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/GcpInfrastructureSpec/GcpInfrastructureSpec.module.scss
@@ -3,11 +3,6 @@
   margin-top: var(--spacing-small);
 }
 
-.connectorLabel {
-  margin-bottom: var(--spacing-xsmall);
-  font-size: var(--font-size-normal) !important;
-}
-
 .formRow {
   > button {
     margin-top: var(--spacing-xxlarge) !important;
@@ -16,7 +11,7 @@
 
 .simultaneousDeployment {
   input {
-    margin-left: var(--spacing-small);
+    margin-left: var(--spacing-medium);
     position: relative;
     margin-top: var(--spacing-small);
   }
