--- a/src/modules/75-cd/components/PipelineSteps/KubernetesInfraSpec/KubernetesInfraSpec.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/KubernetesInfraSpec/KubernetesInfraSpec.module.scss
@@ -1,10 +1,10 @@
 .inputWidth {
-  width: 50%;
+  width: 450px;
   margin-top: var(--spacing-small);
 }
 .simultaneousDeployment {
   input {
-    margin-left: var(--spacing-small);
+    margin-left: var(--spacing-medium);
     position: relative;
     margin-top: var(--spacing-small);
   }
